# ccs-xenv

./: .gitignore  .hgignore  Makefile  Makefile.target  Makefile.vars  Makefile.xenv  README
SOURCES/: README  binutils-2.17-bfd-hash-tweak.patch  binutils-2.17-cross-gprof.patch  binutils-2.17-makeinfo411.patch  binutils-2.17-skip-comments.patch  binutils-2.18-coldfire-ccrsr-disasm.patch  binutils-2.18-coldfire-intouch-disasm.patch  binutils-2.18-qnxtarget.patch  binutils-2.20.1-coldfire-intouch-disasm.patch  binutils-2.20.1-qnxtarget.patch  binutils-2.23.1-coldfire-intouch-disasm.patch  binutils-2.23.1-qnxtarget.patch  capos-binutils-2.17.patch  capos-binutils-2.18.patch  capos-binutils-2.20.1.patch  capos-binutils-2.23.1.patch  capos-binutils-2.35.1.patch  capos-gcc-10.2.0.patch  capos-gcc-3.4.6.patch  capos-gcc-4.1.2.patch  capos-gcc-4.2.2.patch  capos-gcc-4.2.3.patch  capos-gcc-4.2.4.patch  capos-gcc-4.4.3.patch  capos-gdb-6.7.1.patch  capos-gdb-6.8.patch  capos-gdb-7.0.1.patch  capos-gdb-7.5.1.patch  capos-newlib-1.13.0.patch  capos-newlib-1.15.0.patch  capos-newlib-1.16.0.patch  capos-newlib-1.18.0.patch  capos-newlib-3.3.0.patch  coyotos-gcc-4.0.2.patch  crtfiles-0.1.0.tar.bz2  gcc-3.4.6-arm-bigendian.patch  gcc-3.4.6-arm-lib1asm.patch  gcc-3.4.6-arm-nolibfloat.patch  gcc-3.4.6-pr15068-fix.patch  gcc-4.1.2-makeinfo411.patch  (+13 more)
SPECS/: Makefile  OS-ARCH-binutils-2.17.spec.in  OS-ARCH-binutils-2.18.spec.in  OS-ARCH-binutils-2.20.1.spec.in  OS-ARCH-binutils-2.23.1.spec.in  OS-ARCH-crtfiles.spec.in  OS-ARCH-filesystem.spec.in  OS-ARCH-gcc-3.4.6.spec.in  OS-ARCH-gcc-4.1.2.spec.in  OS-ARCH-gcc-4.2.2.spec.in  OS-ARCH-gcc-4.2.3.spec.in  OS-ARCH-gcc-4.2.4.spec.in  OS-ARCH-gcc-4.4.3.spec.in  OS-ARCH-gdb-6.7.1.spec.in  OS-ARCH-gdb-6.8.spec.in  OS-ARCH-gdb-7.0.1.spec.in  OS-ARCH-gdb-7.5.1.spec.in  OS-ARCH-newlib-1.13.0.spec.in  OS-ARCH-newlib-1.15.0.spec.in  OS-ARCH-newlib-1.16.0.spec.in  OS-ARCH-newlib-1.18.0.spec.in  OS-ARCH-xenv.spec.in  OS-common-filesystem.spec.in  OS-host-xenv.spec.in  README  getdistro.sh  makespec.sh
bugs/: bugscript  postreload-gcse.c.diff  vfprintf.i
coytools/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in  coytools.spec  coytools.spec.in  stamp-h.in
coytools/aclocal/: check_ssl.m4
coytools/src/: Makefile.in
coytools/src/astmaker/: AMlexer.cxx  AMlexer.hxx  AMparser.y  AstInfo.cxx  AstInfo.hxx  Makefile.in  ParseType.hxx  UCSLexer.cxx  UCSLexer.hxx  astmaker.cxx  config.h.in  test.ast
coytools/src/bntest/: Lexer.cxx  Lexer.hxx  Makefile.in  ParseType.hxx  Parser.cxx  Parser.output  Parser.y
coytools/src/libsherpa/: BigNum.cxx  BigNum.hxx  BitSet.hxx  ByteString.hxx  CVector.hxx  GCPtr.cxx  GCPtr.hxx  LToken.cxx  LToken.hxx  LexLoc.cxx  LexLoc.hxx  Logging.cxx  Logging.hxx  Makefile.in  OneLineFile.cxx  OneLineFile.hxx  Path.cxx  Path.hxx  PathRandom.cxx  Report.cxx  Report.hxx  SubProcess.cxx  SubProcess.hxx  UExcept.cxx  UExcept.hxx  URI.cxx  URI.hxx  avl.cxx  bs_base.hxx  encode.cxx  encode.hxx  format.cxx  glob.cxx  glob.hxx  gzstream.cxx  gzstream.hxx  iBinaryStream.cxx  iBinaryStream.hxx  ifBinaryStream.cxx  ifBinaryStream.hxx  (+22 more)
